# DRL

./: .gitignore  README.md  pyproject.toml
tests/: PlaneModel.py  aec.py  pd.py
tests/Agents/: agent.py
torch_prj/DQN/models/: dqn_net(works).pt
torch_prj/DQN/src/: FCNet.py  dqn.py  make_gif.py  try_model.py
torch_prj/DuelingDQN/models/: dqn_net.pt  dueling_dqn_net.pt
torch_prj/DuelingDQN/src/: FCDuelingNet.py  dueling_dqn.py  make_gif.py  try_model.py
torch_prj/PG/models/: pg_net.pt  pg_net.pth
torch_prj/PG/src/: nets.py  pg.py
torch_prj/notebooks/: how_to_cuda.ipynb  lstm.ipynb
